--- a/index.html
+++ b/index.html
@@ -1,2 +1,1 @@
-<element-preview id="element-preview" props-pane></element-preview>
-<element-preview id="element-preview2" props-pane></element-preview>
+<div id="app"></div>
